# hexforge_math

./: .clang-format  CMakeLists.txt  main.cpp
io/: io.h
io/implement/: io.cpp
io/input/ops/: cio_out_ops.h
io/input/ops/implement/: cio_out_ops.cpp
io/input/write/: str_write.h
io/input/write/implement/: str_write.cpp
io/input_output/ops/: cio_out_ops.h
io/input_output/ops/implement/: cio_out_ops.cpp
io/input_output/read/: str_read.h
io/input_output/read/implement/: str_read.cpp
io/input_output/write/: str_write.h
io/input_output/write/implement/: str_write.cpp
math/: c_math.h
math/attribute/: attribute.h
math/char/: char.h  nan_helper.h
math/char/implement/: char.cpp
math/f32/: f32.cpp  f32.h  f32_functions.h  fabs.h  snan_err.h  trunc.h
math/f32/implement/: f32_functions.cpp  fabs.cpp  snan_err.cpp  trunc.cpp
math/implement/: round_mode.h
math/implement/attribute/: attribute.h
math/implement/char/: char.h
math/implement/char/implement/: char.cpp
math/implement/f32/: f32_util.h  fabsf.h  fmaf.h  force_eval.h  ilogbf.h  nextafterf.h  radix.h  roundf.h  scalbnf.h  snan_err.h
math/implement/f32/implement/: cbrtf.cpp  ceilf.cpp  copysignf.cpp  f32.cpp  f32_functions.cpp  f32_util.cpp  fabsf.cpp  floorf.cpp  fmaf.cpp  fmaxf.cpp  fminf.cpp  force_eval.cpp  frexpf.cpp  ilogbf.cpp  ldexpf.cpp  modff.cpp  nextafterf.cpp  rintf.cpp  roundf.cpp  scalbnf.cpp  snan_err.cpp  sqrtf.cpp  truncf.cpp
math/implement/f32/internal/: cbrtf.h  ceilf.h  copysignf.h  f32.h  f32_functions.h  fabsf.h  floorf.h  fmaf.h  fmaxf.h  fminf.h  force_eval.h  frexpf.h  ldexpf.h  modff.h  nextafterf.h  numbers.h  radix.h  rintf.h  round_mode.h  snan_err.h  sqrtf.h  truncf.h
math/implement/int/: trailing_zeros.h
math/implement/int/implement/: trailing_zeros.cpp
math/int/: trailing_zeros.h
math/int/implement/: trailing_zeros.cpp
math/internal/: hf_math.h
string/: string.h  to_string.h
string/implement/: string.cpp  to_string.cpp
